# automation

./: .env  .gitignore  .gitlab-ci.yml  .pypirc  readme.md  requirements.txt  robocat.json
automation_tools/: bot_info.py  bot_versions.py  git.py  jira.py  jira_comments.py  jira_helpers.py  mr_data_structures.py  utils.py
config_examples/: python-gitlab.cfg  robocat_config.yaml
deployment/: deployment.yml  inventory-master.yml  values.yaml.j2
functional_tests/: conftest.py  mr_with_open_source_test.py  mr_without_open_source_test.py  readme.md
nx_lint/: pinned_requirements.txt  pyproject.toml  readme.md
nx_lint/nx_lint/: argument_parser.py  cli.py  config.py  constants.py  file_cache.py  linter.py  result_printer.py  utils.py  violation.py
nx_lint/nx_lint/rules/: __init__.py  control_characters.py  empty_lines.py  filename.py  final_newline.py  lowercase_filename.py  rule.py  successive_empty_lines.py  tab_characters.py  trailing_whitespace.py  underscore_separator.py  unicode_characters.py  unix_newlines.py
nx_lint/tests/: __init__.py  conftest.py  fake_file_cache.py  mock_file_cache.py  test_config.py  test_control_characters.py  test_empty_lines.py  test_filename.py  test_final_newline.py  test_linter.py  test_lowercase_rule.py  test_successive_empty_lines.py  test_tab_characters.py  test_trailing_whitespace.py  test_underscore_rule.py  test_unicode_chars.py  test_unix_newlines.py  test_utils.py
nx_source_file_compliance/: __init__.py  _generic_repo_check_config.py  _make_trademarks_re.py  _repo_check_config.py  _source_file_compliance.py  setup.py  (+4 more)
(+156 files in other folders)
