[project]
name = "nx_lint"
description = "Checking tool for the Network Optix text file style guidelines"
readme = "readme.md"
requires-python = ">=3.9"
dependencies = [
    "globmatch==2.0.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest", "pip-tools", "mock"]

[project.scripts]
nx_lint = "nx_lint.cli:main"

[build-system]
requires = ["setuptools>=41", "wheel", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true
version_file = "VERSION"
